@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script-video-ripper"
+<addon id="script.video.ripper"
        name="Swiss-Army-Knife" 
        version="0.6C" 
        provider-name="linuxluemmel.ch@gmail.com">
@@ -10,9 +10,10 @@
                library="default.py"/>
     <extension point="xbmc.addon.metadata">
         <platform>linux</platform>
+        <licence>gpl</licence>
 	<minversion>20000</minversion>
-        <summary>Collection of Tools to ripping and transcoding videos.</summary>
-        <description>This Collection of Tools operates as a GUI for ripping with dd / HandBrake and Makemkv.This script is may not allowed in some countrys.Neither the author of this script or the creators of xbmc are responsible if you break a law by ripping or transcode any dvd or blueray inside your current country.</description>
+        <summary>Collection of tools to ripping and transcoding videos.</summary>
+        <description>This collection of tools operates as a GUI for ripping with dd / HandBrake and Makemkv.This script is may not allowed in some countrys.Neither the author of this script or the creators of xbmc are responsible if you break a law by ripping or transcode any dvd or bluray inside your current country.</description>
     </extension>
 </addon>
 
